# homebooru

./: .env  .gitignore  1  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  Trunk.toml
client/: Cargo.toml  index.html
client/scss/: main.scss
client/src/: main.rs
client/src/components/: login.rs
docs/: Homebooru.toml  Settings.toml  schema.dbs.bak  schema.sql
docs/api/: api.raml
docs/charts/: api.drawio  media.drawio
docs/schema/: schema.dbs
docs/schema/sql/: down.sql
imager/: Cargo.toml
imager/src/: imager.rs  tests.rs  video.rs
media/: Cargo.toml
media/src/: tests.rs
server/: Cargo.toml
server/src/: config.rs  db.rs  error.rs  main.rs
server/src/handlers/: media.rs  mod.rs
server/src/models/: media.rs  mod.rs
server/src/server/: mod.rs
src/: auth.rs  error.rs  main.rs
src/api/: auth.rs  mod.rs  post.rs  user.rs
src/db/: mod.rs
src/db/entity/: media.rs  mod.rs  post.rs  post_page.rs  post_tag.rs  prelude.rs  tag.rs  user.rs
