[package]
authors = ["Hess Lewis <hesslewis@gmail.com>"]
name = "homebooru"
version = "0.1.0"
description = "the homebrew booru"
homepage = "https://github.com/hrlou/homebooru"
repository = "https://github.com/hrlou/homebooru"
keywords = ["booru", "board", "sorting", "server", "image"]
edition = "2021"

[workspace]
members = [ "client" ]

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = 'abort'
rpath = false

[dependencies]
imagery = { git = "https://github.com/hrlou/imagery", branch = "main" }
tokio = { version = "^1.15.0", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "^0", features = [ "runtime-tokio-rustls", "sqlite" ] }
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ], default-features = false }
chrono = { version = "^0.4", features = ["serde"] }
actix-web = "^4.0.0"
actix-multipart = "^0.4.0"
actix-files = "^0.6.0"
actix-identity = "^0.4.0"
rand = "0.8.5"
rust-argon2 = "^1"
env_logger = "^0.9.0"
log = "^0.4.0"
time = "^0.3.0"
lazy_static = "^1.4.0"
derive_more = "^0"