[package]
authors = ["Hess Lewis <hesslewis@gmail.com>"]
name = "homebooru"
version = "0.1.0"
description = "the homebrew booru"
homepage = "https://github.com/hrlou/homebooru"
repository = "https://github.com/hrlou/homebooru"
keywords = ["booru", "board", "sorting", "server", "image"]
edition = "2021"

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }

actix-web = "4.0.1"
actix-multipart = "0.4.0"
actix-files = "0.6.0"

# essential services
clap = { version = "3.1.7", features = [ "derive", "suggestions", "color", "wrap_help", "env" ] }
serde = { version = "1.0.0", features = ["derive"] }

# utilities
env_logger = "0.9.0"
log = "0.4.0"
lazy_static = "1.4.0"

# mime = "0.3.16"
# nanoid = "0.4.0"
# futures = "0.3.19"